# Portugal-Data-Intelligence

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  LICENCE  Makefile  README.md  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
api/: main.py
config/: __init__.py  alert_thresholds.json  data_sources.json  settings.py
dashboard/: app.py  generate_report.py
docs/: api-reference.md  architecture.md  data_dictionary.md  data_library.csv  data_provenance.md  index.md  installation.md  troubleshooting.md  tutorial.md  user-guide.md
notebooks/: 01_exploratory_analysis.ipynb
reports/powerbi/: dashboard_specification.md  dax_measures.md
reports/powerpoint/: Portugal_Data_Intelligence_2026_Presentation.pptx
sql/ddl/: create_tables.sql  (+2 more)
src/: __init__.py
tests/: __init__.py  conftest.py  test_alerts.py  test_analysis.py  test_backtesting.py  test_backtesting_db.py  test_benchmarking.py  test_benchmarking_plots.py  test_correlation.py  test_data_quality_framework.py  test_data_validation.py  test_decomposition.py  test_decomposition_db.py  test_etl.py  test_extract_unit.py  test_fetch_smoke.py  test_forecaster_class.py  test_forecasting.py  test_generate_data.py  test_generate_eu_benchmark.py  test_insights.py  test_lineage.py  test_load.py  test_load_integration.py  test_logger.py  test_pipeline_integration.py  test_pipeline_unit.py  test_scenario.py  test_significance_extra.py  test_significance_units.py  test_transform_units.py  test_visualisations.py
(+56 files in other folders)
