[project]
name = "portugal-data-intelligence"
version = "2.0.0"
description = "Macroeconomic data analysis of Portugal (2010-2025)"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src", "config"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "-v",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring database",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "notebooks/*",
    "src/reporting/slides/*",
    "src/reporting/generate_presentation.py",
    "src/etl/fetch_real_data.py",
    "src/ai_insights/generate_insights.py",
    "src/ai_insights/ai_narrator.py",
    "src/analysis/run_analysis.py",
    "src/analysis/decomposition.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 75
